more on ppu notebook

--- a/examples/pypestutils_pstfrom_mf6.ipynb
+++ b/examples/pypestutils_pstfrom_mf6.ipynb
@@ -348,9 +348,9 @@
     "# set aniso to be a function of column value\n",
     "# stronger aniso near the sfr network\n",
     "jmin,jmax = ppdf.j.min(),float(ppdf.j.max())\n",
-    "ppdf.loc[:,\"aniso\"] = 20 * ppdf.j.values.copy() / jmax\n",
+    "ppdf.loc[:,\"aniso\"] = 30 * ppdf.j.values.copy() / jmax\n",
     "ppdf.loc[ppdf.aniso<1,\"aniso\"] = 1\n",
-    "ppdf.loc[ppdf.aniso>20,\"aniso\"] = 20\n"
+    "ppdf.loc[ppdf.aniso>10,\"aniso\"] = 10\n"
    ]
   },
   {
@@ -360,11 +360,13 @@
    "outputs": [],
    "source": [
     "# same for corr len - longer correlations near sfr\n",
-    "cl = ppdf.corrlen.min()\n",
-    "ppdf.loc[:,\"corrlen\"] = cl * (ppdf.j.values.copy() / jmax)\n",
-    "ppdf.loc[ppdf.corrlen<cl/20,\"corrlen\"] = cl/20\n",
+    "# cl = ppdf.corrlen.min()\n",
+    "# ppdf.loc[:,\"corrlen\"] = cl * (ppdf.j.values.copy() / jmax) * sr.delc.max()\n",
+    "# ppdf.loc[ppdf.corrlen<cl/20,\"corrlen\"] = cl/20\n",
     "ppdf.loc[:,\"x\"] = np.round(ppdf.x.values,1)\n",
-    "ppdf.loc[:,\"y\"] = np.round(ppdf.y.values,1)"
+    "ppdf.loc[:,\"y\"] = np.round(ppdf.y.values,1)\n",
+    "ppdf.corrlen *= 10\n",
+    "ppdf.corrlen.describe()"
    ]
   },
   {
@@ -376,8 +378,8 @@
     "#set bearing to be a high-freq sin wave in the sfr direction\n",
     "y = np.cumsum(m.dis.delc.array)\n",
     "phase = np.pi/4\n",
-    "gain = 30\n",
-    "iy = np.linspace(phase,10*np.pi+phase,y.shape[0])\n",
+    "gain = 40\n",
+    "iy = np.linspace(phase,5*np.pi+phase,y.shape[0])\n",
     "ix = 180 + np.sin(iy) * gain # bearing is centered around 180 degrees\n",
     "ppdf.loc[:,\"bearing\"] = ix[ppdf.i.values]\n"
    ]
@@ -545,7 +547,7 @@
     "    base = hk_arr_file.split('.')[1].replace(\"_\",\"\")+\"_attr:\"\n",
     "    pf.add_parameters(filenames=hk_arr_file,par_type=\"grid\",\n",
     "                       par_name_base=base+\"gr\",pargp=base+\"gr\",zone_array=ib,\n",
-    "                       upper_bound=5.,lower_bound=0.2,ult_ubound=100,ult_lbound=0.01,geostruct=grid_gs)\n",
+    "                       upper_bound=2.,lower_bound=0.5,ult_ubound=100,ult_lbound=0.01,geostruct=grid_gs)\n",
     "    pppdf = ppdf.copy()\n",
     "    \n",
     "    pppdf.loc[:,\"name\"] = [base+n for n in pppdf.ppname.values]\n",
@@ -558,8 +560,8 @@
     "        use_cols=[\"value\",\"bearing\",\"aniso\",\"corrlen\"],\n",
     "        par_name_base=[base+\"pp\",base+\"bearing\",base+\"aniso\",base+\"corrlen\"],\n",
     "        pargp=[base+\"pp\",base+\"bearing\",base+\"aniso\",base+\"corrlen\"],\n",
-    "        upper_bound=[10,pppdf.bearing.max()*1.1,pppdf.aniso.max()*1.1,pppdf.corrlen.max()*1.1],\n",
-    "        lower_bound=[.1,pppdf.bearing.min()*.9,pppdf.aniso.min()*.9,pppdf.corrlen.min()*.9],\n",
+    "        upper_bound=[20,pppdf.bearing.max()*1.1,pppdf.aniso.max()*1.1,pppdf.corrlen.max()*1.1],\n",
+    "        lower_bound=[.05,pppdf.bearing.min()*.9,pppdf.aniso.min()*.9,pppdf.corrlen.min()*.9],\n",
     "        par_style=\"direct\",transform=\"log\",geostruct=pp_gs)\n",
     "    "
    ]
@@ -914,7 +916,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_reals = 100\n",
+    "num_reals = 50\n",
     "pe = pf.draw(num_reals=num_reals,use_specsim=True)"
    ]
   },
@@ -1117,7 +1119,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We well have setup an interface of sorts...but we have purposefully not added anything specific to running modflow yet:  not head or sfr observations and no call to `mf6` in the forward run.  This is because we want to now demonstrate how you can use ensemble methods to condition the prior parameter ensemble on measurements of properties, in this case, HK.  Remember how we added the resultant HK array as \"obseravtions\" earlier?  Well we can treat some of those (ones that are coincident with monitoring well locations) as places were HK has been \"measured\" (in quotes because these measurements are often very imprecise and when scaling for a small diameter monitoring well to a model cell, even more noise is introduced - more on this later).  So first, lets parse out the layer-row-col on the monitoring well locations - this info in encoded in the hds obs names:"
+    "We well have setup an interface of sorts...but we have purposefully not added anything specific to running modflow yet:  not head or sfr observations and no call to `mf6` in the forward run.  This is because we want to now demonstrate how you can use ensemble methods to condition the prior parameter ensemble on measurements of properties, in this case, HK.  Remember how we added the resultant HK array as \"obseravtions\" earlier?  Well we can treat some of those (ones that are coincident with monitoring well locations) as places were HK has been \"measured\" (in quotes because these measurements are often very imprecise and when scaling for a small diameter monitoring well to a model cell, even more noise is introduced - more on this later).  So first, lets just run the prior parameter ensemble (where \"run\" means fill templates and process instruction files - MODFLOW is not being run!) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst.control_data.noptmax = -1\n",
+    "pst.write(os.path.join(pf.new_d,\"freyberg.pst\"),version=2)\n",
+    "pr_m_d = \"master_cond_prior\"\n",
+    "pyemu.os_utils.start_workers(pf.new_d,\"pestpp-ies\",\"freyberg.pst\",worker_root=\".\",num_workers=10,master_dir=pr_m_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets parse out the layer-row-col on the monitoring well locations - this info in encoded in the hds obs names:"
    ]
   },
   {
@@ -1137,6 +1158,13 @@
    "source": [
     "obs_kij = hdsdf.columns.map(lambda x: tuple([int(c) for c in x.split(\"_\")[1:]])).values\n",
     "obs_kij"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These `kij`s are the zero-based grid index locations of the groundwater level monitoring wells.  We will now assume some HK measurements have been collected at these same grid nodes:"
    ]
   },
   {
@@ -1175,13 +1203,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As is customary, we will use one of the prior realizations as the \"truth\" to try match later (we will also remove this realization from the prior parameter ensemble so we arent cheating...too much)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "org_mean_val_dict = {k:npfobs.loc[npfobs.k==k,\"obsval\"].mean() for k in npfobs.k.unique()}\n",
-    "org_mean_val_dict"
+    "oe_pr = pd.read_csv(os.path.join(pr_m_d,\"freyberg.0.obs.csv\"),index_col=0)\n",
+    "truth_idx = oe_pr.index[0]\n",
+    "truth = oe_pr.loc[truth_idx,:].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pe = pe._df\n",
+    "pe.drop(int(truth_idx),inplace=True)\n",
+    "pe.to_csv(os.path.join(pf.new_d,\"prior.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth"
    ]
   },
   {
@@ -1206,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to set both the `obsval` and `weight` quantities in the parent `pst.observation_data` dataframe.  In practice, the `obsval` values will come from a myriad of data sources, like aquifer tests, well installation reports, etc.  Herein, we will just make some fake data for this.  Lets assume the first few HK data are high quality (ie low noise, higher weight), and the remaining ones are more questionable (higer noise, lower weight)..."
+    "We need to set both the `obsval` and `weight` quantities in the parent `pst.observation_data` dataframe.  We will assign random weights between 1 and 10.  In practice, the weights (and the implied noise) of the HK data should hopefully be more than a random number!"
    ]
   },
   {
@@ -1215,44 +1271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_highqual_hk = 4 #number of high quality HK estimates\n",
-    "highqual_stdev = 1.0 #log\n",
-    "highqual_mean_vals = [org_mean_val_dict[k] for k in nz_npfobs.k.values[:num_highqual_hk]]\n",
-    "fake_highqual_hk_vals = np.random.normal(highqual_mean_vals,highqual_stdev,num_highqual_hk)\n",
-    "highqual_hk_names = nz_npfobs.obsnme.values[:num_highqual_hk]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_crap_hk = nz_npfobs.shape[0] - num_highqual_hk #number of crappy HK estimates\n",
-    "crap_stdev = 2.0 #log\n",
-    "crap_mean_vals = [org_mean_val_dict[k] for k in nz_npfobs.k.values[num_highqual_hk:]]\n",
-    "fake_crap_hk_vals = np.random.normal(crap_mean_vals,crap_stdev,num_crap_hk)\n",
-    "fake_crap_hk_vals\n",
-    "crap_hk_names = nz_npfobs.obsnme.values[num_highqual_hk:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we just set the obsvals and the weights for the two type of HK estimates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs.loc[highqual_hk_names,\"obsval\"] = fake_highqual_hk_vals\n",
-    "obs.loc[highqual_hk_names,\"weight\"] = 10.0\n",
-    "obs.loc[crap_hk_names,\"obsval\"] = fake_crap_hk_vals\n",
-    "obs.loc[crap_hk_names,\"weight\"] = 2.0\n"
+    "obs.loc[nz_npfobs.obsnme,\"obsval\"] = truth.loc[nz_npfobs.obsnme].values\n",
+    "obs.loc[nz_npfobs.obsnme,\"weight\"] = np.random.uniform(1.0,10.0,nz_npfobs.shape[0])\n"
    ]
   },
   {
@@ -1374,6 +1394,116 @@
     "pst.write(os.path.join(pf.new_d,\"freyberg.pst\"),version=2)\n",
     "m_d = \"freyberg6_cond_master\"\n",
     "pyemu.os_utils.start_workers(pf.new_d,\"pestpp-ies\",\"freyberg.pst\",num_workers=10,master_dir=m_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phidf = pd.read_csv(os.path.join(m_d,\"freyberg.phi.actual.csv\"))\n",
+    "plt.plot(phidf.iteration,phidf.loc[:,\"mean\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oe_dfs = []\n",
+    "for iiter in range(phidf.iteration.max()+1):\n",
+    "    oe_df = pd.read_csv(os.path.join(m_d,\"freyberg.{0}.obs.csv\".format(iiter)),index_col=0)\n",
+    "    oe_dfs.append(oe_df)\n",
+    "noise_df = pd.read_csv(os.path.join(m_d,\"freyberg.obs+noise.csv\"),index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets compare the noise, prior, and posterior distributions at each grid node where we have an HK measurement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins=10\n",
+    "for oname in nz_npfobs.obsnme:\n",
+    "    fig,ax = plt.subplots(1,1)\n",
+    "    ax.hist(noise_df.loc[:,oname].values,bins=bins,density=True,fc=\"r\",alpha=0.5)\n",
+    "    ax.hist(oe_dfs[0].loc[:,oname].values,bins=bins,density=True,fc=\"0.5\",alpha=0.5)\n",
+    "    ax.hist(oe_dfs[-1].loc[:,oname].values,bins=bins,density=True,fc=\"b\",alpha=0.5)\n",
+    "    ax.set_yticks([])\n",
+    "    ax.set_title(oname,loc=\"left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    plt.close(fig)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking good!  The posterior and noise align nicely at just about all locations, meaning we have assimilated the information in those HK measurements into the parameter ensemble.  Let's viz a realization to see a model-wide view of whats happening:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs[\"i\"] = obs.i.astype(int)\n",
+    "obs[\"j\"] = obs.j.astype(int)\n",
+    "uonames = obs.oname.unique()\n",
+    "uonames.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reals = oe_dfs[-1].index.values[:2]\n",
+    "for uoname in uonames:\n",
+    "    uobs = obs.loc[obs.oname==uoname,:]\n",
+    "    prarr = np.zeros((nrow,ncol))\n",
+    "    prarr[uobs.i,uobs.j] = oe_dfs[0].loc[reals[0],uobs.obsnme]\n",
+    "    prarr[id_arr==0] = np.nan\n",
+    "    ptarr = np.zeros((nrow,ncol))\n",
+    "    ptarr[uobs.i,uobs.j] = oe_dfs[-1].loc[reals[0],uobs.obsnme]\n",
+    "    ptarr[id_arr==0] = np.nan\n",
+    "    mn = min(np.nanmin(prarr),np.nanmin(ptarr))\n",
+    "    mx = max(np.nanmax(prarr),np.nanmax(ptarr))\n",
+    "    \n",
+    "    \n",
+    "    fig,axes = plt.subplots(1,2,figsize=(8,6))\n",
+    "    ax = axes[0]\n",
+    "    cb = ax.imshow(prarr,vmin=mn,vmax=mx)\n",
+    "    plt.colorbar(cb,ax=ax)\n",
+    "    ax.set_title(uoname+\" prior\",loc=\"left\")\n",
+    "    ax = axes[1]\n",
+    "    cb = ax.imshow(ptarr,vmin=mn,vmax=mx)\n",
+    "    plt.colorbar(cb,ax=ax)\n",
+    "    ax.set_title(uoname+\" posterior\",loc=\"left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kewl.  At this point, you would take the final iteration parameter ensemble and use it as the prior for some history matching (or scenario analyses and/or stack in an optimization analysis if you want skip history matching!)"
    ]
   },
   {
