fix in freyberg mf6 notebook

--- a/examples/pstfrom_mf6.ipynb
+++ b/examples/pstfrom_mf6.ipynb
@@ -695,7 +695,7 @@
     "    kper = int(wel_file.split('.')[1].split('_')[-1]) - 1  \n",
     "    pf.add_parameters(filenames=wel_file,par_type=\"constant\",par_name_base=\"wel_cn\",\n",
     "                     pargp=\"wel_cn\", upper_bound = 1.5, lower_bound=0.5,\n",
-    "                     datetime=dts[kper],geostruct=temporal_gs)"
+    "                     datetime=dts[kper],geostruct=temporal_gs,index_cols=[0,1,2],use_cols=[3])"
    ]
   },
   {
